Bug 725955: emulate former handling of 100% clear blocks in GCAlloc::Finalize (r pending=rulohani).